<resources>
    <!-- General -->
    <string name="app_name">Asobouyo!</string>
    <string name="hello_world">Hello world!</string>
    <string name="asobou">あそぼうよ！</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <!-- Shared -->
    <string-array name="order_diff_spinner">
        <item>All</item>
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string name="order_song_button">Song</string>
    <string name="order_artist_button">Artist</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- LoginActivity -->
    <string name="signed_out">You have been signed out.</string>
    <string name="signed_in">You have been signed in.</string>
    <string name="signin_status_changed">Sign in Status</string>

    <!-- AboutActivity -->
    <string name="title_activity_about">About あそぼうよ！</string>
    <string name="dev_note">A note from the developers,\n\n
        &#9;&#9;&#9;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam efficitur euismod ex ut
        porttitor. Nulla faucibus tincidunt ultrices. Curabitur a placerat
        diam, id commodo turpis. Praesent non elit quis sem ornare lobortis. Nulla vitae maximus
        diam, eu pharetra odio. Proin sodales molestie egestas. Curabitur iaculis, elit fringilla
        hendrerit euismod, mi quam tempor mauris, eget volutpat massa lacus aliquam lacus. Aliquam
        viverra augue quis aliquet commodo. Donec vehicula, orci a semper ullamcorper, turpis diam
        tempus felis, in tempus ligula turpis quis magna. Nulla ullamcorper pretium dolor non
        rhoncus. Cras volutpat ex ipsum, eget ullamcorper massa luctus eu. Praesent non urna ipsum.
        Donec euismod pretium hendrerit.</string>
    <string name="dev_names">Benedicta Baidoo\nNathan Reline</string>

    <!-- MainActivity -->
    <string name="title_activity_dashboard">Hello Username!</string>
    <string name="play">Play</string>
    <string name="rank">Rank</string>
    <string name="song">Song</string>
    <string name="score">Score</string>
    <string name="viewMore">View More&#8230;</string>
    <string name="logo_description">Logo</string>

    <!-- HelpActivity -->
    <string name="title_activity_help">Help</string>
    <string name="requirements_h">Requirements</string>
    <string name="requirements_b">In order to play あそぼうよ！ your device must be connected to
                                    the internet. The phone number used to log in must also have
                                    access to SMS. Lastly, if you intend to play Type Mode, your
                                    device must have a Japanese keyboard installed.</string>
    <string name="how_to_play_h">How to Play</string>
    <string name="how_to_play_b">The objective of the game is to play through each song and fill in
                                    the blanks as they appear throughout the lyrics. There are two
                                    game modes that alter how the game is played. Tap Mode is the
                                    easier of the two, simply giving four possible answers to choose
                                    from. Type Mode is much more advanced, requiring the player to
                                    type in the missing lyrics using a combination of Hiragana,
                                    Katakana, and Kanji.</string>

    <!-- HttpManager -->

    <!-- LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!--PlayTapModeActivity -->
    <string name="title_activity_play_tap_mode">Play</string>
    <string name="currLyrics">Lyrics have not yet been loaded.</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="song_end_dialog_title">よくがんばったね！</string>
    <string name="song_end_dialog_message">Would you like to return to the dashboard or view your score?</string>
    <string name="view_score">View Score</string>
    <string name="dashboard">Dashboard</string>

    <!--PlayTypeModeActivity -->
    <string name="title_activity_play_type_mode">Play</string>

    <!-- ScoreboardActivity -->
    <string name="title_activity_scoreboard">Scoreboard</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="text_settings">Text Settings</string>
    <string name="lyrics">Lyrics</string>
    <string name="global_text">Global text change</string>
    <string name="game_mode">Game Mode</string>
    <string name="gm_warning">You will be asked every time if you do not pick a default game
    mode.</string>
    <string name="default_mode">Default Mode</string>
    <string name="player">User</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">New Name</string>

    <!-- SongSelectionActivity -->
    <string name="title_activity_song_selection">Select a Song</string>
    <string name="song_mode_dialog_message">Select which mode you would like to play.</string>
    <string name="song_mode_dialog_title">Song Mode Selection</string>
    <string name="tap_mode">Tap Mode</string>
    <string name="type_mode">Type Mode</string>
    <string name="cancel">Cancel</string>
    <string name="action_about">About</string>

</resources>
