<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/tw__solid_white"
                tools:context="fuwafuwa.asobou.HelpActivity">

    <TextView
        android:text="@string/requirements_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requirements_h"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <!-- TODO: HELP - change the words so it's not all lorem ipsum -->
    <TextView
        android:id="@+id/requirements_b"
        android:text="@string/requirements_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/how_to_play_h"
        android:text="@string/how_to_play_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/how_to_play_b"
        android:text="@string/how_to_play_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/how_to_play_h"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
