<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="fuwafuwa.asobou.PlayTapModeActivity"
              android:weightSum="1">

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="351dp"
        android:layout_height="0dp"
        android:text="@string/currLyrics"
        android:id="@+id/lyrics"
        android:maxLines="100"
        android:scrollbars="vertical"
        android:layout_weight="0.34"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1"
                android:id="@+id/button"
                android:layout_column="0"
                android:width="175dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2"
                android:id="@+id/button2"
                android:layout_gravity="right"
                android:layout_column="5"
                android:width="175dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3"
                android:id="@+id/button3"
                android:layout_gravity="left|bottom"
                android:width="175dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4"
                android:id="@+id/button4"
                android:layout_gravity="bottom|right"
                android:layout_column="5"
                android:width="175dp"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
