<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="fuwafuwa.asobou.DashboardActivity">

    <Button
        android:id="@+id/play_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="@string/play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"/>

    <TableLayout
        android:id="@+id/scoreboard"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true">

        <TableRow
            android:id="@+id/colHeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                />

            <TextView
                android:id="@+id/song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                android:layout_column="2"
                />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_column="4"/>
        </TableRow>

        <TableRow
            android:id="@+id/entryRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/rankEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"/>

            <TextView
                android:id="@+id/songEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                android:layout_column="2"/>

            <TextView
                android:id="@+id/scoreEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_column="4"/>
        </TableRow>

        <TableRow
            android:id="@+id/entryRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/viewMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewMore"
                android:onClick="onViewMoreButtonClick"
                android:clickable="true"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
