<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="fuwafuwa.asobou.activities.MainActivity"
                android:background="@color/tw__solid_white">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:src="@drawable/asobu_logo_red"
        android:contentDescription="@string/logo_description"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:clickable="true"
        android:onClick="onPlayButtonClick"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/scoreboard"
        android:layout_alignStart="@+id/scoreboard" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_scoreboard"
        android:id="@+id/scoreboard"
        android:onClick="onScoreboardButtonClick"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
